updated index Page with placeholders

--- a/index.html
+++ b/index.html
@@ -10,40 +10,98 @@
   <title>Employee Files</title>
 </head>
 <body>
-  <div class="alert alert-primary container row" role="alert">
+  <div class="alert alert-primary" role="alert">
     Managers
     <div class="card col" style="width: 18rem;">
       <div class="card-header">
-        Featured
+        Jimmy
       </div>
       <ul class="list-group list-group-flush">
-        <li class="list-group-item">Cras justo odio</li>
-        <li class="list-group-item">Dapibus ac facilisis in</li>
-        <li class="list-group-item">Vestibulum at eros</li>
+        <li class="list-group-item">Manager ID: 01</li>
+        <li class="list-group-item">Manager Email: jimmy@gmail.com</li>
+        <li class="list-group-item">Office Number: 01</li>
       </ul>
     </div>
     <div class="card col" style="width: 18rem;">
       <div class="card-header">
-        Featured
+        Meinard
       </div>
       <ul class="list-group list-group-flush">
-        <li class="list-group-item">Cras justo odio</li>
-        <li class="list-group-item">Dapibus ac facilisis in</li>
-        <li class="list-group-item">Vestibulum at eros</li>
+        <li class="list-group-item">Manager ID: 02</li>
+        <li class="list-group-item">Manager Email: meinard@gmail.com</li>
+        <li class="list-group-item">Office Number: 02</li>
       </ul>
     </div>
   </div>
 
   <div class="alert alert-success" role="alert">
     Employees
+    <div class="card col" style="width: 18rem;">
+      <div class="card-header">
+        Jimmy
+      </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">Employee ID: 01</li>
+        <li class="list-group-item">Employee Email: jimmy@gmail.com</li>
+      </ul>
+    </div>
+    <div class="card col" style="width: 18rem;">
+      <div class="card-header">
+        Meinard
+      </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">Employee ID: 02</li>
+        <li class="list-group-item">Employee Email: meinard@gmail.com</li>
+      </ul>
+    </div>
   </div>
 
   <div class="alert alert-warning" role="alert">
     Engineers
+    <div class="card col" style="width: 18rem;">
+      <div class="card-header">
+        Jimmy
+      </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">Engineer ID: 01</li>
+        <li class="list-group-item">Engineer Email: jimmy@gmail.com</li>
+        <li class="list-group-item">Github Username: tuffluffjimmy</li>
+      </ul>
+    </div>
+    <div class="card col" style="width: 18rem;">
+      <div class="card-header">
+        Meinard
+      </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">Engineer ID: 02</li>
+        <li class="list-group-item">Engineer Email: meinard@gmail.com</li>
+        <li class="list-group-item">Github Username: Mr_Meinard</li>
+      </ul>
+    </div>
   </div>
 
   <div class="alert alert-info" role="alert">
     Interns
+    <div class="card col" style="width: 18rem;">
+      <div class="card-header">
+        Jimmy
+      </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">Intern ID: 01</li>
+        <li class="list-group-item">Intern Email: jimmy@gmail.com</li>
+        <li class="list-group-item">School: Oregon State</li>
+      </ul>
+    </div>
+    <div class="card col" style="width: 18rem;">
+      <div class="card-header">
+        Meinard
+      </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">Intern ID: 02</li>
+        <li class="list-group-item">Intern Email: meinard@gmail.com</li>
+        <li class="list-group-item">School: Latvian International</li>
+      </ul>
+    </div>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
